# rtklib-docker-ui

./: .dockerignore  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
docker/: Dockerfile
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx  theme.ts
frontend/src/api/: files.ts  index.ts  rnx2rtkp.ts  str2str.ts
frontend/src/components/: FileBrowserModal.tsx  PostProcessingConfiguration.tsx  SnrMaskModal.tsx  StreamConfiguration.tsx  TabbedTerminalOutput.tsx  index.ts
frontend/src/components/obsViewer/: ObsViewerModal.tsx  SatVisibilityChart.tsx
frontend/src/components/viewer/: ChartView.tsx  Plot2DView.tsx  ResultViewer.tsx  index.ts  posParser.ts  types.ts
frontend/src/hooks/: index.ts  useWebSocket.ts
frontend/src/types/: rnx2rtkpConfig.ts  streamConfig.ts
frontend/src/utils/: streamArgs.ts
src/rtklib_web_ui/: __init__.py  main.py
src/rtklib_web_ui/api/: config.py  files.py  obs_qc.py  process.py  rnx2rtkp.py  str2str.py
src/rtklib_web_ui/services/: __init__.py  obs_qc_service.py  process_manager.py  rnx2rtkp_service.py  rtklib.py  websocket_manager.py
