[project]
name = "rtklib-web-ui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "h-shiono", email = "hato.gnss@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
rtklib-web-ui = "rtklib_web_ui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
